--- a/css/newYearGame.less
+++ b/css/newYearGame.less
@@ -1,11 +1,5 @@
 /*CSS重置*/
 body,ul,ol,li,p,h1,h2,h3,h4,h5,h6,form,fildset,table,td,img,div,dl,dt,dd,input{margin:0;padding:0;border:0;}
-body{ font-size:12px;}
-[data-dpr="2"] body,ul,ol,li,p,h1,h2,h3,h4,h5,h6,form,fildset,table,td,img,div,dl,dt,dd,input{margin:0;padding:0;border:0;}
-body{ font-size:24px;}
-[data-dpr="3"] body,ul,ol,li,p,h1,h2,h3,h4,h5,h6,form,fildset,table,td,img,div,dl,dt,dd,input{margin:0;padding:0;border:0;}
-body{ font-size:36px;}
-
 img{border:none;}
 ul,ol{ list-style:none;}
 input,select,textarea{outline:none;}
@@ -43,11 +37,11 @@ a{ text-decoration:none;}
       line-height: 0.76rem;;
     }
     .score{
-      background: url("../img/score.png") left center no-repeat;
+      background: url("../img/game/score.png") left center no-repeat;
       background-size: contain;
     }
     .time{
-      background: url("../img/time.png") left center no-repeat;
+      background: url("../img/game/time.png") left center no-repeat;
       background-size: contain;
     }
   }
@@ -63,7 +57,7 @@ a{ text-decoration:none;}
     -webkit-box-pack:center;
     -webkit-box-align:center;
     .cutTime{
-      background: url("../img/cutTimeBackground.png") left center no-repeat;
+      background: url("../img/game/cutTimeBackground.png") left center no-repeat;
       background-size: contain;
       height: 6.227rem;
       width: 7.373rem;
@@ -73,17 +67,17 @@ a{ text-decoration:none;}
         margin: 3.2rem 3rem;
       }
       .num_1{
-        background: url("../img/1.png") left center no-repeat;
+        background: url("../img/game/1.png") left center no-repeat;
         width: 78px;
         height: 101px;
         background-size: contain;
       }
       .num_2{
-        background: url("../img/2.png") left center no-repeat;
+        background: url("../img/game/2.png") left center no-repeat;
         background-size: contain;
       }
       .num_3{
-        background: url("../img/3.png") left center no-repeat;
+        background: url("../img/game/3.png") left center no-repeat;
         background-size: contain;
       }
     }
@@ -97,7 +91,7 @@ a{ text-decoration:none;}
     width: 100%;
     height: 100%;
     .hintArrow{
-      background: url("../img/arrow.png") left center no-repeat;
+      background: url("../img/game/arrow.png") left center no-repeat;
       width: 0.95rem;
       height: 2rem;
       background-size: contain;
