--- a/css/newYearH5.less
+++ b/css/newYearH5.less
@@ -4,19 +4,19 @@ ul,ol{ list-style:none;}
 input,select,textarea{outline:none;}
 textarea{resize:none;}
 a{ text-decoration:none;}
+
 //内容
 .newYearWrap{
   .part{
-    img{
-      width: 100%;
-      display: block;
-      vertical-align: top;
-      margin-top: -.02rem;
-    }
-  }
-/*  .part{
     width: 100%;
     margin-top: -0.02rem;
+    .theme{
+      display: block;
+      width: 7.84rem;
+      margin-left: 1.08rem;
+      margin-bottom: 0.52rem;
+      overflow: hidden;
+    }
   }
   .part1{
     background: url("../img/h5/newYearH5_01.jpg") left center no-repeat;
@@ -52,6 +52,6 @@ a{ text-decoration:none;}
     background: url("../img/h5/newYearH5_07.jpg") left center no-repeat;
     height: 5.6133rem;//421px;
     background-size: contain;
-  }*/
+  }
 
 }
