--- a/css/newYearH5.less
+++ b/css/newYearH5.less
@@ -4,53 +4,261 @@ ul,ol{ list-style:none;}
 input,select,textarea{outline:none;}
 textarea{resize:none;}
 a{ text-decoration:none;}
+/*清浮动*/
+.clearfix:after{content:"";display:block;clear:both;}
+.fl{  float: left;  }
+.fr{float: right}
+
 
 //内容
+@-webkit-keyframes flipover-top {
+  0% {
+    z-index: 8;
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  50% {
+    z-index: 8;
+    -webkit-transform: rotateX(-90deg);
+    transform: rotateX(-90deg);
+  }
+  51% {
+    z-index: 7;
+    opacity: 1;
+  }
+  100% {
+    z-index: 7;
+    opacity: 0;
+    -webkit-transform: rotateX(-180deg);
+    transform: rotateX(-180deg);
+  }
+}
+@keyframes flipover-top {
+  0% {
+    z-index: 8;
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  50% {
+    z-index: 8;
+    -webkit-transform: rotateX(-90deg);
+    transform: rotateX(-90deg);
+  }
+  51% {
+    z-index: 7;
+    opacity: 1;
+  }
+  100% {
+    z-index: 7;
+    opacity: 0;
+    -webkit-transform: rotateX(-180deg);
+    transform: rotateX(-180deg);
+  }
+}
+@-webkit-keyframes flipover-bottom {
+  0% {
+    z-index: 7;
+    -webkit-transform: rotateX(180deg);
+    transform: rotateX(180deg);
+  }
+  50% {
+    z-index: 7;
+    -webkit-transform: rotateX(90deg);
+    transform: rotateX(90deg);
+  }
+  51% {
+    z-index: 8;
+  }
+  100% {
+    z-index: 8;
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+}
+@keyframes flipover-bottom {
+  0% {
+    z-index: 7;
+    -webkit-transform: rotateX(180deg);
+    transform: rotateX(180deg);
+  }
+  50% {
+    z-index: 7;
+    -webkit-transform: rotateX(90deg);
+    transform: rotateX(90deg);
+  }
+  51% {
+    z-index: 8;
+  }
+  100% {
+    z-index: 8;
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+}
 .newYearWrap{
   .part{
     width: 100%;
     margin-top: -0.02rem;
     .theme{
       display: block;
-      width: 7.84rem;
-      margin-left: 1.08rem;
-      margin-bottom: 0.52rem;
+      width: 2.8267rem;//width: 7.84rem;
+      margin: 0 1.08rem 0.52rem;
       overflow: hidden;
+      img{
+        width: 7.7866rem;
+      }
     }
+    .theme.active{
+      width: 7.84rem;
+      -webkit-transition:width 2s;
+      transition: width 2s;
+    }
+    .rightWrap{
+      .theme{
+        position: relative;
+        height: 2.51rem;
+        img{
+          position: absolute;
+          top:0;
+          right: 0;
+        }
+      }
+    }
+
   }
   .part1{
     background: url("../img/h5/newYearH5_01.jpg") left center no-repeat;
-    height: 6.1333rem;//460px;
+    height: 6.2933rem;
     background-size: contain;
+    .calender{
+      position: absolute;
+      top: 1.5rem;
+      left: 5rem;
+      .cTop, .cBottom {
+        width: 1.2533rem;
+        height: 0.5333rem;
+        position: absolute;
+        left: 0;
+        background-repeat: no-repeat;
+        -webkit-transform-style: preserve-3d
+      }
+      .cTop {
+        top: 0;
+        background-position: center 0;
+        -webkit-transform-origin: center bottom;
+                transform-origin: center bottom
+      }
+      .cBottom {
+        top: 0.5333rem;
+        background-position: center -0.5333rem;
+        -webkit-transform-origin: center top;
+                transform-origin: center top
+      }
+      .old .cTop, .old .cBottom {
+        z-index: 2;
+        background-image: url(../img/h5/calender1_03.png);
+        background-size:cover;
+      }
+      .new .cTop, .new .cBottom {
+        z-index: 1;
+        background-image: url(../img/h5/calender2_03.png);
+        background-size:cover;
+      }
+      .old .cTop {
+        -webkit-animation: flipover-top .8s linear 0.5s 1 normal forwards;
+        animation: flipover-top .8s linear 0.5s 1 normal forwards
+      }
+      .new .cBottom {
+        -webkit-animation: flipover-bottom .8s linear 0.5s 1 normal forwards;
+        animation: flipover-bottom .8s linear 0.5s 1 normal forwards
+      }
+    }
+    .newYearTitle{
+        padding: 2.7rem 0 0 1.5333rem;
+        img{
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+          width: 6.8267rem;
+        }
+        img.active{
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+          -webkit-transition:-webkit-transform 2s 0.8s ;
+          transition:-webkit-transform 2s 0.8s ;
+          transition:transform 2s 0.8s ;
+        }
+    }
   }
   .part2{
     background: url("../img/h5/newYearH5_02.jpg") left center no-repeat;
-    height: 6.9733rem;//523px;
+    height: 6.8133rem;
     background-size: contain;
+    position: relative;
+    .rule{
+      position: absolute;
+      left: 0;
+      bottom: 0.36rem;
+      width: 2.573rem;
+      height: 2.05333rem;
+    }
+    .toGame{
+      width: 6.4667rem;
+      height: 3.2667rem;
+      position: absolute;
+      right: 0;
+      bottom: 0.5067rem;
+      overflow: hidden;
+      .toGameText{
+        background: url("../img/h5/gameBtn_03.png") left center no-repeat;
+        background-size: contain;
+        width: 4.5467rem;
+        height: 3.2667rem;
+        -webkit-transform: translateX(4.5467rem);
+                transform: translateX(4.5467rem);
+      }
+      .toGameText.active{
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+        -webkit-transition:-webkit-transform 2s 2s;
+        transition:-webkit-transform 2s 2s;
+        transition:transform 2s 2s;
+      }
+      .toGameChild{
+        position: absolute;
+        top: 0;
+        right: 0;
+        background: url("../img/h5/gameChild_03.png") left center no-repeat;
+        background-size: contain;
+        height: 3.2667rem;
+        width: 2.4533rem;
+      }
+
+    }
   }
   .part3{
     background: url("../img/h5/newYearH5_03.jpg") left center no-repeat;
-    height: 4.5867rem;//344px;
+    height: 4.5867rem;
     background-size: contain;
   }
   .part4{
     background: url("../img/h5/newYearH5_04.jpg") left center no-repeat;
-    height: 8.013rem;//601px;
+    height: 8.013rem;
     background-size: contain;
   }
   .part5{
     background: url("../img/h5/newYearH5_05.jpg") left center no-repeat;
-    height: 8.4rem;//630px;
+    height: 8.4rem;
     background-size: contain;
   }
   .part6{
     background: url("../img/h5/newYearH5_06.jpg") left center no-repeat;
-    height: 8.28rem;//621px;
+    height: 8.28rem;
     background-size: contain;
+
   }
   .part7{
     background: url("../img/h5/newYearH5_07.jpg") left center no-repeat;
-    height: 5.6133rem;//421px;
+    height: 5.6133rem;
     background-size: contain;
   }
 
