小人的起跳 问题：在block前还是后

--- a/css/newYearGame.less
+++ b/css/newYearGame.less
@@ -13,12 +13,12 @@ a{ text-decoration:none;}
 .fr{float: right}
 
 
-[data-dpr="2"] div {
+/*[data-dpr="2"] div {
   font-size: 24px;
 }
 [data-dpr="3"] div {
   font-size: 36px;
-}
+}*/
 //game
 #view_game{
   //header
