--- a/css/newYearGame.less
+++ b/css/newYearGame.less
@@ -12,13 +12,6 @@ a{ text-decoration:none;}
 .fl{  float: left;  }
 .fr{float: right}
 
-
-/*[data-dpr="2"] div {
-  font-size: 24px;
-}
-[data-dpr="3"] div {
-  font-size: 36px;
-}*/
 //game
 @red:#fb0c2c;
 #view_game{
@@ -106,28 +99,24 @@ a{ text-decoration:none;}
   top: 0;
   width: 100%;
   height: 100%;
-  //display: -webkit-box;
-  display: none;
-  -webkit-box-pack:center;
   background-color: rgba(0,0,0,.3);
+  display: none;
   .red{
     color: @red;
   }
 }
 #gamePopContainer{
   .successOrFail{
-    margin-top: 2rem;
-    position: relative;
-    display: none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
   }
   .successOrFail .close{
-    position: absolute;
-    left: 0;
-    bottom: -2.2933rem;
     height: 2.2933rem;
     width: 100%;
-    background: url("../img/game/close.png") center center no-repeat;
-    background-size: 0.8233rem 0.8266rem;
+   position: absolute;
+   bottom: -0.5rem;
   }
   .successOrFail .text{
     margin-top: 3.7333rem;
@@ -138,13 +127,13 @@ a{ text-decoration:none;}
   }
   .successPop{
     background: url("../img/game/success_03.png") left center no-repeat;
-    height: 13.5rem;
+    height: 15.2267rem;
     width: 8.62rem;
     background-size: contain;
     .couponBags{
       position: absolute;
       left: 0;
-      bottom: 0;
+      bottom: 1.7rem;
       display: -webkit-box;
       -webkit-box-pack:center;
       width: 100%;
@@ -157,13 +146,13 @@ a{ text-decoration:none;}
   }
   .failPop{
     background: url("../img/game/fail_03.png") left center no-repeat;
-    height: 13.5333rem;
+    height: 15.2rem;
     width: 8.64rem;
     background-size: contain;
     .buttonsArea{
       position: absolute;
       left: 0;
-      bottom: 0.92rem;
+      bottom: 2.62rem;
       display: -webkit-box;
       -webkit-box-pack:center;
       width: 100%;
@@ -176,14 +165,15 @@ a{ text-decoration:none;}
   }
 }
 #resultPopContainer{
-  -webkit-box-align: center;
   .resultPop{
     background: url("../img/game/result.png") left center no-repeat;
     height: 6.3867rem;
     width: 6.6rem;
     background-size: contain;
-    position: relative;
-    display: none;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
     .share{
       position: absolute;
       bottom: 0.56rem;
