--- a/css/newYearH5.less
+++ b/css/newYearH5.less
@@ -33,6 +33,28 @@ a{ text-decoration:none;}
     transform: rotateX(-180deg);
   }
 }
+@-webkit-keyframes flipover-top {
+  0% {
+    z-index: 8;
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  50% {
+    z-index: 8;
+    -webkit-transform: rotateX(-90deg);
+    transform: rotateX(-90deg);
+  }
+  51% {
+    z-index: 7;
+    opacity: 1;
+  }
+  100% {
+    z-index: 7;
+    opacity: 0;
+    -webkit-transform: rotateX(-180deg);
+    transform: rotateX(-180deg);
+  }
+}
 @keyframes flipover-top {
   0% {
     z-index: 8;
@@ -186,6 +208,7 @@ a{ text-decoration:none;}
           -webkit-transition:-webkit-transform 2s 0.8s ;
           transition:-webkit-transform 2s 0.8s ;
           transition:transform 2s 0.8s ;
+          transition:transform 2s 0.8s, -webkit-transform 2s 0.8s;
         }
     }
   }
@@ -222,6 +245,7 @@ a{ text-decoration:none;}
         -webkit-transition:-webkit-transform 2s 2s;
         transition:-webkit-transform 2s 2s;
         transition:transform 2s 2s;
+        transition:transform 2s 2s, -webkit-transform 2s 2s;
       }
       .toGameChild{
         position: absolute;
@@ -262,4 +286,31 @@ a{ text-decoration:none;}
     background-size: contain;
   }
 
+}
+.ruleWrap{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+  z-index: 10;
+  display: none;
+  .ruleArea{
+    background: url("../img/h5/rule_03.png") left center no-repeat;
+    height: 15.24rem;
+    width: 8.6533rem;
+    background-size: contain;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+  }
+  .close{
+    position: absolute;
+    height: 2.2933rem;
+    width: 100%;
+    bottom: 0.7rem;
+  }
 }
