--- a/css/newYearGame.less
+++ b/css/newYearGame.less
@@ -48,14 +48,17 @@ a{ text-decoration:none;}
     width: 100%;
     height: 100%;
     //display:-webkit-box;
-    display: none;
-    -webkit-box-pack:center;
-    -webkit-box-align:center;
+    //display: none;
     .cutTime{
       background: url("../img/game/cutTimeBackground.png") left center no-repeat;
       background-size: contain;
       height: 6.227rem;
       width: 7.373rem;
+      position: absolute;
+      left:50%;
+      top: 50%;
+      -webkit-transform: translate(-50%,-50%);
+      transform: translate(-50%,-50%);
       #num{
         height: 1.35rem;
         width: 1.04rem;
@@ -63,8 +66,6 @@ a{ text-decoration:none;}
       }
       .num_1{
         background: url("../img/game/1.png") left center no-repeat;
-        width: 78px;
-        height: 101px;
         background-size: contain;
       }
       .num_2{
@@ -85,6 +86,7 @@ a{ text-decoration:none;}
     top:0;
     width: 100%;
     height: 100%;
+    pointer-events: none;
     .hintArrow{
       background: url("../img/game/arrow.png") left center no-repeat;
       width: 0.95rem;
@@ -107,10 +109,12 @@ a{ text-decoration:none;}
   }
 }
 #gamePopContainer{
+
   .successOrFail{
     position: absolute;
     left: 50%;
     top: 50%;
+    -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
   }
   .successOrFail .close{
@@ -174,6 +178,7 @@ a{ text-decoration:none;}
     position: absolute;
     left: 50%;
     top: 50%;
+    -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
     .share{
       position: absolute;
